--- a/index.html
+++ b/index.html
@@ -5,141 +5,151 @@
 <title>For Divyansh 💘</title>
 
 <style>
-body {
-  margin: 0;
-  height: 100vh;
-  font-family: 'Segoe UI', sans-serif;
-  background: radial-gradient(circle at top, #ffafbd, #ffc3a0);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  overflow: hidden;
+body{
+  margin:0;
+  height:100vh;
+  font-family:'Segoe UI',sans-serif;
+  background:linear-gradient(135deg,#ff9a9e,#fad0c4);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  overflow:hidden;
 }
 
-.card {
-  background: rgba(255,255,255,0.25);
-  backdrop-filter: blur(10px);
-  padding: 45px;
-  border-radius: 35px;
-  box-shadow: 0 25px 60px rgba(0,0,0,0.25);
-  max-width: 90%;
+.card{
+  background:rgba(255,255,255,0.25);
+  backdrop-filter:blur(10px);
+  padding:45px;
+  border-radius:35px;
+  box-shadow:0 25px 60px rgba(0,0,0,0.25);
+  max-width:90%;
+  animation:fade 1.6s ease;
 }
 
-h1 {
-  color: #fff;
-  font-size: 34px;
-  margin-bottom: 10px;
+h1{color:#fff;font-size:34px;}
+p{color:#fff;font-size:18px;line-height:1.6;}
+
+button{
+  padding:14px 34px;
+  font-size:18px;
+  border-radius:30px;
+  border:none;
+  cursor:pointer;
+  margin:18px 10px;
 }
 
-p {
-  color: #fff;
-  font-size: 18px;
-  line-height: 1.5;
+#yes{background:#fff;color:#ff4f7b;font-weight:bold;}
+#no{background:#ff4f7b;color:#fff;position:absolute;}
+
+.hidden{display:none;}
+
+@keyframes fade{
+  from{opacity:0;transform:scale(0.85);}
+  to{opacity:1;transform:scale(1);}
 }
 
-button {
-  padding: 14px 32px;
-  font-size: 18px;
-  border-radius: 30px;
-  border: none;
-  cursor: pointer;
-  margin: 18px 10px;
-  transition: transform 0.2s ease;
+.heart{
+  position:absolute;
+  font-size:26px;
+  animation:float 5s linear infinite;
 }
 
-button:hover {
-  transform: scale(1.05);
-}
-
-#yes {
-  background: #fff;
-  color: #ff4f7b;
-  font-weight: bold;
-}
-
-#no {
-  background: #ff4f7b;
-  color: #fff;
-  position: absolute;
-}
-
-.hidden {
-  display: none;
-}
-
-.love {
-  animation: reveal 1.8s ease;
-}
-
-@keyframes reveal {
-  from { opacity: 0; transform: scale(0.85); }
-  to { opacity: 1; transform: scale(1); }
-}
-
-.heart {
-  position: absolute;
-  font-size: 26px;
-  animation: float 5s linear infinite;
-}
-
-@keyframes float {
-  0% { transform: translateY(0); opacity: 1; }
-  100% { transform: translateY(-900px); opacity: 0; }
+@keyframes float{
+  0%{transform:translateY(0);opacity:1;}
+  100%{transform:translateY(-900px);opacity:0;}
 }
 </style>
 </head>
 
 <body>
 
-<!-- FIRST SCREEN -->
-<div class="card" id="question">
+<!-- PAGE 1 -->
+<div class="card" id="page1">
   <h1>Hey Divyansh 💌</h1>
   <p>
-    I’ve been meaning to ask you something…<br>
-    (and no, you don’t really have a choice 😌)
+    I was thinking about you…<br>
+    and I realized there’s something my heart has been wanting to say.
   </p>
   <h1>Will you be my Valentine? 💖</h1>
-
-  <button id="yes" onclick="accept()">YES, OBVIOUSLY ❤️</button>
+  <button id="yes" onclick="goPage2()">Yes ❤️</button>
   <button id="no" onmouseover="escape()">No 👀</button>
 </div>
 
-<!-- SECOND SCREEN -->
-<div class="card hidden love" id="accepted">
-  <h1>HAHA, I KNEW IT 🥹❤️</h1>
+<!-- PAGE 2 -->
+<div class="card hidden" id="page2">
+  <h1>Okay… one more thing 🥺</h1>
   <p>
-    Divyansh, you really thought you could say no? 😏<br><br>
-    Thank you for choosing me.<br>
-    Thank you for being mine.<br><br>
-    Today, tomorrow, and all the little days in between —<br>
-    you’re my Valentine 💘
+    If you say yes,<br>
+    you’re choosing late-night talks,<br>
+    stupid laughs,<br>
+    silent comfort,<br>
+    and a heart that chooses you every single day.
+  </p>
+  <h1>Still sure about me? 💞</h1>
+  <button id="yes" onclick="goPage3()">Always ❤️</button>
+</div>
+
+<!-- PAGE 3 -->
+<div class="card hidden" id="page3">
+  <h1>Good 🥹❤️</h1>
+  <p>
+    Because Divyansh,<br><br>
+    somewhere between the little moments and the big feelings,<br>
+    you became my safe place.<br><br>
+    I don’t promise perfection,<br>
+    but I promise honesty, warmth,<br>
+    and a love that shows up — even on the ordinary days.
+  </p>
+  <button id="yes" onclick="goPage4()">Come here 💘</button>
+</div>
+
+<!-- PAGE 4 -->
+<div class="card hidden" id="page4">
+  <h1>So this is me… ❤️</h1>
+  <p>
+    choosing you.<br>
+    today.<br>
+    tomorrow.<br>
+    and every version of us that the future brings.<br><br>
+    Happy Valentine’s Day, Divyansh 💖<br>
+    You’re my favorite yes.
   </p>
 </div>
 
 <script>
-function escape() {
-  const no = document.getElementById("no");
-  no.style.top = Math.random() * 80 + "%";
-  no.style.left = Math.random() * 80 + "%";
+function escape(){
+  const no=document.getElementById("no");
+  no.style.top=Math.random()*80+"%";
+  no.style.left=Math.random()*80+"%";
 }
 
-function accept() {
-  document.getElementById("question").classList.add("hidden");
-  document.getElementById("accepted").classList.remove("hidden");
+function goPage2(){
+  document.getElementById("page1").classList.add("hidden");
+  document.getElementById("page2").classList.remove("hidden");
   hearts();
 }
 
-function hearts() {
-  setInterval(() => {
-    const heart = document.createElement("div");
-    heart.className = "heart";
-    heart.innerHTML = "💖";
-    heart.style.left = Math.random() * 100 + "vw";
-    heart.style.bottom = "0";
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 5000);
-  }, 250);
+function goPage3(){
+  document.getElementById("page2").classList.add("hidden");
+  document.getElementById("page3").classList.remove("hidden");
+}
+
+function goPage4(){
+  document.getElementById("page3").classList.add("hidden");
+  document.getElementById("page4").classList.remove("hidden");
+}
+
+function hearts(){
+  setInterval(()=>{
+    const h=document.createElement("div");
+    h.className="heart";
+    h.innerHTML="💖";
+    h.style.left=Math.random()*100+"vw";
+    h.style.bottom="0";
+    document.body.appendChild(h);
+    setTimeout(()=>h.remove(),5000);
+  },250);
 }
 </script>
 
